bk_ida/gccida/g2/compute_use_by_pseudos
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/compute_use_by_pseudos/src/reload1.c:1094:23: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( unsigned int)( mode_class_0[v14] - 5) > 1 ) 
                      ^~~~~~~~~~~~
                      mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/compute_use_by_pseudos/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/compute_use_by_pseudos/src/obj/reload1.o] Error 1
